tests/NormalTests/paczka1/fuzzy1/52176920.err
Error in line 2: 7i2xsn A616 52,9
Error in line 8: l2JrW S650 94,5
Error in line 17: TtkrLb A530 65,2
Error in line 29: PvHL A542 14,8
